# ACG6697

./: .gitignore  BEST_SHARING_METHOD.md  GOOGLE_COLAB_SETUP.md  PROJECT_CONTEXT.md  README.md  export_notebooks_html.sh  prepare_for_colab.sh  pyproject.toml  umdcase.md
.cursor/rules/: emoji-ban.mdc  uv.mdc
data/: UMD_Data Set_Customer Invoices.xlsx  UMD_Data Set_Customer Master.xlsx  UMD_Data Set_Products.xlsx  UMD_Data Set_Sales Orders.xlsx  UMD_Data Set_Sales Territory.xlsx  UMD_Data Set_Shipments.xlsx
notebooks/: 00_findings_summary.md  01_data_loading.ipynb  02_fraud_risk_factors.ipynb  02_reconciliation.ipynb  03_three_way_match.ipynb  04_credit_analysis.ipynb  04_credit_analysis_check.ipynb  05_aging_analysis.ipynb  06_fraud_detection.ipynb  NOTEBOOK_VERIFICATION_REPORT.md  README.md
outputs/tables/: aging_analysis_full.csv  aging_by_bucket.csv  aging_over_90_days.csv  aging_unpaid_invoices.csv  ar_credit_analysis_full.csv  ar_exceeding_credit_limits.csv  ar_outstanding_12_31_2017.csv  ar_unpaid_invoices_2017.csv  client_list_comparison.csv  dec31_same_day_transactions.csv  high_risk_customers.csv  invoiced_not_shipped.csv  period_end_concentration.csv  q4_credit_limit_changes.csv  reconciliation_summary.csv  revenue_records_2017.csv  sales_without_credit_limits.csv  three_way_match_exceptions.csv  three_way_match_summary.csv
src/: aging_analysis.py  credit_analysis.py  data_loader.py  fraud_detection.py  main_analysis.py  three_way_match.py  umd_audit_report.txt
