[project]
name = "umd-audit-analysis"
version = "0.1.0"
description = "Audit analysis project for Urgent Medical Device, Inc."
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.3.0",
    "ipywidgets>=8.0.0",
    "fuzzywuzzy>=0.18.0",
    "reportlab>=4.4.4",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

